# Helmsgard

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.ini
assets/: animations.ini  attacks.ini  bfonts.ini  dlgconvos.ini  dlgtrigger.ini  images.arc  items.ini  itemtypes.ini  loottables.ini  music.ini  particles.ini  prefabs.ini  quest_objs.ini  quests.ini  recipes.ini  sounds.arc  sounds.ini  sprites.ini  sprites_boss.ini  sprites_icons.ini  sprites_player.ini  sprites_slime.ini  statusfx.ini  villagers.ini
assets/regions/: region02.json  region02.tmx
script/: arctool.py
src/: archive.c  audio.c  bfont.c  command.c  common.h  config.c  console.c  dialog.c  draw.c  editor.c  entity.c  field.c  game.c  graphics.c  ini.c  input.c  item.c  loading.c  main.c  menu.c  navgrid.c  particles.c  quest.c  recipe.c  region.c  title.c  util.c  villager.c  zz_sdlfc.c  zz_tiled.h
